[gedtree] Fixing spacing & overflow issues

--- a/css/gedtree-tree.css
+++ b/css/gedtree-tree.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');*/
 
 #tree{
     line-height: 1;
@@ -87,7 +87,9 @@
     display: flex;
     flex-direction: column;
     min-width: 0;
-    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    /*overflow: hidden;*/
 }
 #tree .individual p {
     white-space: nowrap;
@@ -109,8 +111,7 @@
 }
 #tree .individual p {
     white-space: nowrap;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-x: clip;
     text-overflow: ellipsis;
     margin: 0;
 
